force-app/main/default/objects/conference360__Attendee__c/fields/conference360__Add_To_Webinar__c.field-meta.xml
<CustomField>
    <fullName>conference360__Add_To_Webinar__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this field to add the Attendee to the Event Webinar/Meeting.</inlineHelpText>
    <label>Add To Webinar/Meeting</label>
    <type>Checkbox</type>
</CustomField>