force-app/main/default/objects/conference360__Attendee__c/fields/conference360__Address_Geocodes__c.field-meta.xml
<CustomField>
    <fullName>conference360__Address_Geocodes__c</fullName>
    <description>store the co-ordinates for the attendee address</description>
    <inlineHelpText>store the co-ordinates for the attendee address</inlineHelpText>
    <label>Address Geocodes</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>