force-app/main/default/objects/conference360__Attendee__c/fields/conference360__Attendance_Status__c.field-meta.xml
<CustomField>
    <fullName>conference360__Attendance_Status__c</fullName>
    <inlineHelpText>The attendance status of an attendee at the event. If the attendee is checked in through the mobile app, the status will automatically update to &quot;Attended&quot;. The remaining options can be set manually or through a custom process flow.</inlineHelpText>
    <label>Attendance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>No-Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>