force-app/main/default/objects/conference360__Attendee__c/fields/conference360__Attendee_Greeting_Name__c.field-meta.xml
<CustomField>
    <fullName>conference360__Attendee_Greeting_Name__c</fullName>
    <formula>IF( ISPICKVAL(conference360__Event__r.conference360__Event_Settings__r.conference360__Greeting_Name_Formality__c, &quot;Formal&quot;), TEXT(conference360__Salutation__c) + &quot; &quot; + conference360__Attendee_Full_Name__c,

IF( ISPICKVAL(conference360__Event__r.conference360__Event_Settings__r.conference360__Greeting_Name_Formality__c, &quot;Informal First&quot;), conference360__First_Name__c,

IF( ISPICKVAL(conference360__Event__r.conference360__Event_Settings__r.conference360__Greeting_Name_Formality__c, &quot;Informal Full&quot;), conference360__Attendee_Full_Name__c,conference360__Attendee_Full_Name__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Greeting Name</label>
    <type>Text</type>
</CustomField>