force-app/main/default/objects/conference360__Attendee__c/fields/conference360__AttendeeLink__c.field-meta.xml
<CustomField>
    <fullName>conference360__AttendeeLink__c</fullName>
    <description>Unique attendee link URL. Generated automatically.</description>
    <inlineHelpText>Unique attendee link URL. Generated automatically.</inlineHelpText>
    <label>AttendeeLink</label>
    <type>Url</type>
</CustomField>