force-app/main/default/objects/conference360__Attendee__c/fields/conference360__AttendeeLink_URL__c.field-meta.xml
<CustomField>
    <fullName>conference360__AttendeeLink_URL__c</fullName>
    <description>Unique attendee link URL.</description>
    <formula>BLANKVALUE($Setup.conference360__Blackthorn_Events_Settings__c.conference360__Platform_Domain__c, &apos;https://events.blackthorn.io/&apos;) &amp; &apos;/&apos; &amp; $Organization.Id &amp; &apos;/a/&apos; &amp; conference360__Key_Encrypted__c</formula>
    <inlineHelpText>Unique attendee link URL.</inlineHelpText>
    <label>AttendeeLink URL</label>
    <type>Text</type>
</CustomField>