force-app/main/default/objects/conference360__Attendee__c/fields/conference360__CASESAFEID__c.field-meta.xml
<CustomField>
    <fullName>conference360__CASESAFEID__c</fullName>
    <description>Transforms the Salesforce record ID from 15 digits to 18 digits or use with QR code generation.</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Transforms the Salesforce record ID from 15 digits to 18 digits or use with QR code generation.</inlineHelpText>
    <label>CASE SAFE ID</label>
    <type>Text</type>
</CustomField>