force-app/main/default/objects/conference360__Attendee__c/fields/conference360__Connection_Requests_Disabled__c.field-meta.xml
<CustomField>
    <fullName>conference360__Connection_Requests_Disabled__c</fullName>
    <description>If you&apos;d like to disable this attendee&apos;s ability to send chat/connection requests, set this picklist value to False.</description>
    <inlineHelpText>If you&apos;d like to disable this attendee&apos;s ability to send chat/connection requests, set this picklist value to False.</inlineHelpText>
    <label>Connection Requests Disabled</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>False</fullName>
            </value>
            <value>
                <fullName>True</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>