force-app/main/default/objects/conference360__Attendee__c/fields/conference360__Contact__c.field-meta.xml
<CustomField>
    <fullName>conference360__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The contact record related to this Attendee. Existing contacts will be related based on Salesforce matching rules.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>