force-app/main/default/objects/conference360__Attendee__c/fields/conference360__Country__c.field-meta.xml
<CustomField>
    <fullName>conference360__Country__c</fullName>
    <inlineHelpText>The country of the attendee.</inlineHelpText>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>