force-app/main/default/objects/conference360__Attendee__c/fields/conference360__Do_Not_Update_Contact_Fields__c.field-meta.xml
<CustomField>
    <fullName>conference360__Do_Not_Update_Contact_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When this is checked, regardless of setting the Contact lookup, do not update any related Attendee fields.</inlineHelpText>
    <label>Do Not Update Contact Fields</label>
    <type>Checkbox</type>
</CustomField>