force-app/main/default/objects/conference360__Attendee__c/fields/conference360__Email2__c.field-meta.xml
<CustomField>
    <fullName>conference360__Email2__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>The attendee&apos;s email address. This field may be set by the registration process, from the related Contact, or manually entered.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>