force-app/main/default/objects/conference360__Attendee__c/fields/conference360__Email_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>conference360__Email_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Opt-In</label>
    <type>Checkbox</type>
</CustomField>