force-app/main/default/objects/conference360__Attendee__c/fields/conference360__Event_Details__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event_Details__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;&amp; conference360__Event__c , &apos;View event details&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Details</label>
    <type>Text</type>
</CustomField>