force-app/main/default/objects/conference360__Attendee__c/fields/conference360__Event_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event_Image_URL__c</fullName>
    <formula>conference360__Event__r.conference360__Image_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Image URL</label>
    <type>Text</type>
</CustomField>