force-app/main/default/objects/conference360__Attendee__c/fields/conference360__Event_Item__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Prepopulates the ticket the attendee should be purchasing with AttendeeLink.</inlineHelpText>
    <label>Event Item</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Event Items available for the Attendee Event can be set.</errorMessage>
        <filterItems>
            <field>conference360__Event_Item__c.conference360__Event__c</field>
            <operation>equals</operation>
            <valueField>$Source.conference360__Event__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>conference360__Event_Item__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>