force-app/main/default/objects/conference360__Attendee__c/fields/conference360__Event_Organizer_Name__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event_Organizer_Name__c</fullName>
    <formula>IF(ISBLANK(conference360__Event__r.conference360__Organizer_Account__c), conference360__Event__r.conference360__Organizer_Contact__r.FirstName &amp;&quot; &quot;&amp;conference360__Event__r.conference360__Organizer_Contact__r.LastName,conference360__Event__r.conference360__Organizer_Account__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Organizer Name</label>
    <type>Text</type>
</CustomField>