force-app/main/default/objects/conference360__Attendee__c/fields/conference360__Events_Attended__c.field-meta.xml
<CustomField>
    <fullName>conference360__Events_Attended__c</fullName>
    <description>Unique attendee link URL.</description>
    <formula>if(conference360__Contact__c!=null ,conference360__Contact__r.conference360__Events_Attended__c,conference360__Lead__r.conference360__Events_Attended__c)</formula>
    <inlineHelpText>The total number of Events this Attendee has Attended.</inlineHelpText>
    <label>Events Attended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>