force-app/main/default/objects/conference360__Attendee__c/fields/conference360__First_Name__c.field-meta.xml
<CustomField>
    <fullName>conference360__First_Name__c</fullName>
    <inlineHelpText>First name of the attendee. This field may be set by the registration process, from the related Contact, or manually entered.</inlineHelpText>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>