force-app/main/default/objects/conference360__Attendee__c/fields/conference360__Hide_Other_Tickets__c.field-meta.xml
<CustomField>
    <fullName>conference360__Hide_Other_Tickets__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, the only ticket available for checkout will be the Event Item related to this Attendee in the lookup Event Item field.</inlineHelpText>
    <label>Hide Other Tickets</label>
    <type>Checkbox</type>
</CustomField>