force-app/main/default/objects/conference360__Attendee__c/fields/conference360__Invite_Sent__c.field-meta.xml
<CustomField>
    <fullName>conference360__Invite_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invite Sent</label>
    <type>Checkbox</type>
</CustomField>