force-app/main/default/objects/conference360__Attendee__c/fields/conference360__Invite_Sent_At__c.field-meta.xml
<CustomField>
    <fullName>conference360__Invite_Sent_At__c</fullName>
    <label>Invite Sent At</label>
    <type>DateTime</type>
</CustomField>