force-app/main/default/objects/conference360__Attendee__c/fields/conference360__Key2__c.field-meta.xml
<CustomField>
    <fullName>conference360__Key2__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <inlineHelpText>Indexed key field that is used by the Events API and Attendee Urls - is generated by triggers if it is blank.</inlineHelpText>
    <label>Key</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>