force-app/main/default/objects/conference360__Attendee__c/fields/conference360__Lead__c.field-meta.xml
<CustomField>
    <fullName>conference360__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The lead record related to this Attendee. Existing lead will be related based on Salesforce matching rules.</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>