force-app/main/default/objects/conference360__Attendee__c/fields/conference360__Phone__c.field-meta.xml
<CustomField>
    <fullName>conference360__Phone__c</fullName>
    <inlineHelpText>The attendee&apos;s phone number. This field may be set by the registration process, from the related Contact, or manually entered.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>