force-app/main/default/objects/conference360__Attendee__c/fields/conference360__Post_Event_Questions_URL__c.field-meta.xml
<CustomField>
    <fullName>conference360__Post_Event_Questions_URL__c</fullName>
    <formula>BLANKVALUE($Setup.conference360__Blackthorn_Events_Settings__c.conference360__Platform_Domain__c, &apos;https://events.blackthorn.io&apos;) &amp; &apos;/&apos; &amp; $Organization.Id &amp; &apos;/s/&apos; &amp; conference360__Post_Event_Questions__r.conference360__Encrypted_ID__c &amp; &apos;?attendeeId=&apos; &amp; conference360__Encrypted_ID__c</formula>
    <inlineHelpText>Public Url to this Form/Survey for this Attendee.</inlineHelpText>
    <label>Post Event Questions URL</label>
    <type>Text</type>
</CustomField>