force-app/main/default/objects/conference360__Attendee__c/fields/conference360__Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>conference360__Postal_Code__c</fullName>
    <inlineHelpText>The postal code of the attendee.</inlineHelpText>
    <label>Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>