force-app/main/default/objects/conference360__Attendee__c/fields/conference360__Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>conference360__Primary_Email__c</fullName>
    <inlineHelpText>The main contact&apos;s email from the event registration. This field is automatically populated.</inlineHelpText>
    <label>Primary Email</label>
    <type>Email</type>
</CustomField>