force-app/main/default/objects/conference360__Attendee__c/fields/conference360__Referred_By__c.field-meta.xml
<CustomField>
    <fullName>conference360__Referred_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Auto-set if an AttendeeLink invite is forwarded and someone registers through the link with our Not You feature.</description>
    <inlineHelpText>Auto-set if an AttendeeLink invite is forwarded and someone registers through the link with our Not You feature.</inlineHelpText>
    <label>Referred By</label>
    <referenceTo>conference360__Attendee__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>