force-app/main/default/objects/conference360__Attendee__c/fields/conference360__Registration_DateTime__c.field-meta.xml
<CustomField>
    <fullName>conference360__Registration_DateTime__c</fullName>
    <description>The Registration Date/Time is automatically set when the Registration Status updates to &quot;Registered&quot;.</description>
    <inlineHelpText>The Registration Date/Time is automatically set when the Registration Status updates to &quot;Registered&quot;.</inlineHelpText>
    <label>Registration Date/Time</label>
    <type>DateTime</type>
</CustomField>