force-app/main/default/objects/conference360__Attendee__c/fields/conference360__Salutation__c.field-meta.xml
<CustomField>
    <fullName>conference360__Salutation__c</fullName>
    <label>Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mr.</fullName>
            </value>
            <value>
                <fullName>Ms.</fullName>
            </value>
            <value>
                <fullName>Mrs.</fullName>
            </value>
            <value>
                <fullName>Dr.</fullName>
            </value>
            <value>
                <fullName>Prof.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>