force-app/main/default/objects/conference360__Attendee__c/fields/conference360__Send_Reminder__c.field-meta.xml
<CustomField>
    <fullName>conference360__Send_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Reminder</label>
    <type>Checkbox</type>
</CustomField>