force-app/main/default/objects/conference360__Attendee__c/fields/conference360__Street__c.field-meta.xml
<CustomField>
    <fullName>conference360__Street__c</fullName>
    <inlineHelpText>The street address of the attendee.</inlineHelpText>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>